--- a/EdmsMockApi/app/package.json
+++ b/EdmsMockApi/app/package.json
@@ -11,7 +11,9 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "construct-ui": "^0.2.1",
     "copy-webpack-plugin": "^4.2.0",
     "cross-env": "^5.2.0",
